@@ -88,6 +88,7 @@ extern "C" int luaopen_{{self:openName(class)}}(lua_State *L)
   luaL_register(L, NULL, {{ class.name }}_member_methods);
   // save meta-table in {{self:libName(class.parent)}}
   dub_register(L, "{{self:libName(class.parent)}}", "{{self:name(class)}}");
-
-  return 1;
+  // <mt>
+  lua_pop(L, 1);
+  return 0;
 }
